<resources>
    <string name="app_name">Music App</string>
    <string name="albumimage">MusicAlbumImage</string>
    <string name="song_album_image">song_album_image</string>
    <string name="button_to_pause_song">button to pause song</string>
    <string name="button_to_play_song">button to play song</string>
    <string name="textview">TextView</string>
    <string name="to_show_song_details">to show song details</string>
    <string name="to_add_song_in_favourite_list">to add song in favourite list</string>
    <string name="music_app">Music App</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="welcome_nto_the_world_of_music">Welcome\nto the World of Music</string>
    <string name="by_jontish_kakadiya">By Jontish Kakadiya</string>
    <string name="signin">SignIn</string>
    <string name="signup">SignUp</string>
    <string name="discover_your_sound_your_rhythm_your_world">Discover your sound, your rhythm, your world.</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="create_account">Create Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="full_name">Full Name</string>
    <string name="let_s_get_nstarted">Let\'s get\nstarted!</string>
    <string name="song_name">song name</string>
    <string name="shows_album_of_currently_playing_song">shows album of currently playing song</string>
    <string name="shows_logo_of_the_app">shows logo of the app</string>
    <string name="shows_three_line_for_the_side_menu">shows three line for the side menu</string>
    <string name="shows_arrow_to_navigate_the_song_playinh_activity">shows arrow to navigate the song playinh activity</string>
    <string name="song_title">song title</string>
    <string name="shows_album_of_the_song">shows album of the song</string>
    <string name="artist_name">Artist Name</string>
    <string name="add_to_favorite">Add To Favorite</string>
    <string name="song_subtitle">Song subtitle</string>
    <string name="now_playing">Now Playing</string>
    <string name="album_cover_of_the_playing_song">Album cover of the playing song</string>
    <string name="logout">Logout</string>
    <string name="favorite_songs">Favorite Songs</string>
    <string name="user_profile">User Profile</string>
    <string name="email">email</string>
    <string name="your_playlist">Your Playlist</string>
    <string name="imageview_that_shows_user_profile_image">imageview that shows user profile image</string>
</resources>