<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:background="@color/DarkBlue"
    android:orientation="vertical">

    <ImageView
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:scaleType="fitXY"
        android:id="@+id/Song_Album"
        android:contentDescription="@string/shows_album_of_the_song" />

    <TextView
        android:id="@+id/Artist_Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/artist_name"
        android:layout_marginStart="4dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="20sp"
        />
    <TextView
        android:id="@+id/Song_Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/song_title"
        android:layout_marginStart="4dp"
        android:textStyle="normal"
        android:textColor="@color/white"
        android:textSize="16sp"
        />

</LinearLayout>

