<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/DarkBlue"
    tools:context=".SignUp.SignUp_Activity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/let_s_get_nstarted"
        android:fontFamily="@font/popinsbold"
        android:textSize="30sp"
        android:layout_marginTop="30dp"
        android:textColor="@color/white"/>
    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="-3dp"
        app:dividerColor="@color/white"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edt_fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:background="@drawable/round_shape"
            android:drawableStart="@drawable/baseline_fullname"
            android:hint="@string/full_name"
            android:drawablePadding="8dp"
            android:padding="14dp"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/edt_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:drawablePadding="8dp"
            android:inputType="phone"
            android:background="@drawable/round_shape"
            android:drawableStart="@drawable/baseline_phone_24"
            android:hint="@string/phone_number"
            android:padding="14dp"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/edt_EmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:background="@drawable/round_shape"
            android:drawableLeft="@drawable/baseline_email_24"
            android:hint="@string/email_address"
            android:drawablePadding="8dp"
            android:inputType="textEmailAddress"
            android:padding="14dp"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:background="@drawable/round_shape"
            android:drawableStart="@drawable/baseline_password_24"
            android:hint="@string/password"
            android:drawablePadding="8dp"
            android:inputType="textPassword"
            android:padding="14dp"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/edt_confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:background="@drawable/round_shape"
            android:drawableStart="@drawable/baseline_lock"
            android:hint="@string/confirm_password"
            android:drawablePadding="8dp"
            android:inputType="textPassword"
            android:padding="14dp"
            android:textColor="@color/black" />

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

        <Button
            android:id="@+id/btn_createAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue"
            android:drawableEnd="@drawable/baseline_arrow"
            android:gravity="center"
            android:textAlignment="center"
            android:text="@string/create_account"
            android:textSize="20sp" />

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/white"
            android:visibility="gone" />

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"/>
        <TextView
            android:id="@+id/GoToMainScreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:textColor="@color/white"
            android:gravity="center"/>
    </LinearLayout>


</LinearLayout>