<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/DarkBlue"
    tools:context=".model.MainActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/toolbar"
        android:layout_margin="20dp">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/logo"
            android:contentDescription="@string/shows_logo_of_the_app" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_back"
            android:gravity="center"
            android:textSize="26sp"
            android:textColor="@color/white"

            />
        <ImageView
            android:id="@+id/sidemenu"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/side_menu"
            android:contentDescription="@string/shows_three_line_for_the_side_menu" />




    </RelativeLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/songs_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"/>

    <LinearLayout
        android:id="@+id/Nowplaying_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="8dp"
        android:orientation="vertical"
        android:padding="3dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="6dp"
            android:padding="10dp"
            android:background="@color/white"
            android:alpha="0.8"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">
                <ImageView
                    android:id="@+id/Nowplaying_img"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:foregroundGravity="center_vertical"
                    android:contentDescription="@string/shows_album_of_currently_playing_song"/>
                <TextView
                    android:id="@+id/Nowplaying_title"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:textStyle="bold"
                    android:text="@string/song_name"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:textSize="22sp" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/baseline_arrow_up"
                    android:contentDescription="@string/shows_arrow_to_navigate_the_song_playinh_activity" />
            </LinearLayout>




        </androidx.cardview.widget.CardView>



    </LinearLayout>



</RelativeLayout>

